--- a/chymeranet/bc9ef5f/Dockerfile
+++ b/chymeranet/bc9ef5f/Dockerfile
@@ -15,8 +15,12 @@ COPY env.yml /CHyMErA-Net/env.yml
 # Create environment
 RUN cd /CHyMErA-Net && conda env create -n cas12a -f env.yml
 
+# ENV PATH /opt/conda/envs/cas12a/bin:$PATH
+
 RUN echo "cd /CHyMErA-Net && source activate cas12a" >> ~/.bashrc
+# RUN echo 'source /opt/conda/etc/profile.d/conda.sh && conda activate cas12a && cd /CHyMErA-Net' >> /etc/bash.bashrc
+
 RUN sed -i 's/import os/#import os/' /opt/conda/envs/cas12a/lib/python3.7/site-packages/distutils-precedence.pth
 
 # Activate and python setup
-RUN /bin/bash -c "source activate cas12a && cd /CHyMErA-Net && python setup.py install"
+RUN /bin/bash -c "source activate cas12a && pip install protobuf==3.20.3 && cd /CHyMErA-Net && python setup.py install"
