--- a/vcf2maf/1.6.21/Dockerfile
+++ b/vcf2maf/1.6.21/Dockerfile
@@ -1,48 +1,30 @@
-FROM clearlinux:latest AS builder
+FROM perl:latest
 
-# Install a minimal versioned OS into /install_root, and bundled tools if any
-ENV CLEAR_VERSION=43160
-RUN swupd os-install --no-progress --no-boot-update --no-scripts \
-    --version ${CLEAR_VERSION} \
-    --path /install_root \
-    --statedir /swupd-state \
-    --bundles os-core-update,which
+# Install required dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    wget \
+    git \
+    python3 \
+    python3-pip \
+    samtools \
+    bcftools \
+    htslib \
+    ensembl-vep
 
-# Download and install conda into /usr/bin
-ENV MINICONDA_VERSION=py312_24.4.0-0
-RUN curl -sL https://repo.anaconda.com/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh -o /tmp/miniconda.sh && \
-    bash /tmp/miniconda.sh -bup /usr && \
-    rm -f /tmp/miniconda.sh && \
-    conda config --set solver libmamba
+# Install mamba to handle conda-based dependencies
+RUN curl -sL https://github.com/mamba-org/mamba/releases/download/0.29.0/mamba-linux-64.sh -o /usr/local/bin/mamba && \
+    chmod +x /usr/local/bin/mamba
 
-# Use mamba to install remaining tools/dependencies into /usr/local
-ENV VEP_VERSION=112.0 \
-    HTSLIB_VERSION=1.20 \
-    BCFTOOLS_VERSION=1.20 \
-    SAMTOOLS_VERSION=1.20 \
-    LIFTOVER_VERSION=447
-RUN conda create -y -p /usr/local && \
-    conda install -y -p /usr/local \
-    -c conda-forge \
-    -c bioconda \
-    -c defaults \
-    ensembl-vep==${VEP_VERSION} \
-    htslib==${HTSLIB_VERSION} \
-    bcftools==${BCFTOOLS_VERSION} \
-    samtools==${SAMTOOLS_VERSION} \
-    ucsc-liftover==${LIFTOVER_VERSION}
+# Install other dependencies via mamba/conda
+RUN mamba install -y -c bioconda \
+    vcf2maf
 
-# Download vcf2maf v1.6.21 from GitHub
-RUN curl -L -o ./vcf2maf.pl https://raw.githubusercontent.com/mskcc/vcf2maf/v1.6.21/vcf2maf.pl
-RUN chmod +x ./vcf2maf.pl
+# Download the specific version of vcf2maf.pl (v1.6.21)
+RUN curl -L -o /opt/vcf2maf.pl https://raw.githubusercontent.com/mskcc/vcf2maf/v1.6.21/vcf2maf.pl
 
-# Deploy the minimal OS and tools into a clean target layer
-FROM scratch
+# Set the executable permission for the vcf2maf.pl script
+RUN chmod +x /opt/vcf2maf.pl
 
-LABEL maintainer="Cyriac Kandoth <ckandoth@gmail.com>"
-
-COPY --from=builder /install_root /
-COPY --from=builder /usr/local /usr/local
-#COPY data /opt/data
-COPY *.pl /opt/
+# Set the working directory to /opt
 WORKDIR /opt
