--- a/agepy/1790ea2/Dockerfile
+++ b/agepy/1790ea2/Dockerfile
@@ -10,7 +10,7 @@ echo "deb http://security.debian.org/debian-security bullseye-security main cont
 echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq wget build-essential zlib1g-dev libbz2-dev liblzma-dev git libmagickwand-dev bedtools && \
+  apt-get install -yq wget build-essential zlib1g-dev libbz2-dev liblzma-dev git libmagickwand-dev bedtools pigz && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
 
 RUN pip3 install pandas && python3 -c "import pandas"
