--- a/agepy/1790ea2/Dockerfile
+++ b/agepy/1790ea2/Dockerfile
@@ -20,4 +20,4 @@ RUN pip3 install biomart && python3 -c "import biomart"
 RUN pip3 install numpy && python3 -c "import numpy"
 RUN pip3 install -U scikit-learn scipy matplotlib && python3 -c "import sklearn, scipy, matplotlib"
 RUN pip3 install seaborn && python3 -c "import seaborn"
-RUN pip3 install git+https://github.com/mpg-age-bioinformatics/AGEpy.git && python3 -c "import AGEpy"
+RUN pip3 install git+https://github.com/mpg-age-bioinformatics/AGEpy.git@932dfe2 && python3 -c "import AGEpy"
