--- a/sra/3.2.1/Dockerfile
+++ b/sra/3.2.1/Dockerfile
@@ -10,7 +10,7 @@ echo "deb http://security.debian.org/debian-security bullseye-security main cont
 echo "deb-src http://security.debian.org/debian-security bullseye-security main contrib non-free" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get -yq dist-upgrade && \
-  apt-get install -yq wget tar build-essential libxml-libxml-perl && \
+  apt-get install -yq wget tar build-essential libxml-libxml-perl pigz && \
   apt-get clean && rm -rf /var/lib/apt/lists/* 
 
 RUN wget https://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/3.2.1/sratoolkit.3.2.1-ubuntu64.tar.gz && \
